# c2lc-coding-environment

./: .flowconfig  .flowcoverage-tests-threshold  .gitignore  .markdownlint.json  README.flow-typed.md  README.md  netlify.toml  package-lock.json  package.json  webpack.config.js
Grid3/: Weavly.gridset
ProjectBot_Tetra/: 3LEDs.ino  Servos.ino  Servos_2motor.ino  servosround2.ino
docs/: Arduino BLE.md  adding-new-world-checklist.md  contributing.md  flow-typing.md  glossary.txt  image-credits.md  keyboard.md  sounds.md
extras/: log_headers.js
flow-libs/: messages.json.js
open_robot_kit/06_crickit_circuit_playround_bluefruit_miniq/tests/: CMakeLists.txt  MotorMovement_test.cpp  Motor_test.cpp  Vagrantfile  mock_arduino.h  weavly_math_test.cpp
open_robot_kit/crickit_circuit_playround_bluefruit_miniq/: CMakeLists.txt  README.md  Vagrantfile  crickit_circuit_playround_bluefruit_miniq.ino
open_robot_kit/crickit_circuit_playround_bluefruit_miniq/robot/: Button.cpp  Button.h  Motor.cpp  Motor.h  MotorMovement.cpp  MotorMovement.h  RobotMotors.cpp  RobotMotors.h  motor.cpp  motor.h  robot.ino  weavly_math.cpp
open_robot_kit/crickit_circuit_playround_bluefruit_miniq/single_motor/: single_motor.ino
open_robot_kit/crickit_circuit_playround_bluefruit_miniq/tests/: Button_test.cpp  CMakeLists.txt  MotorMovement_test.cpp  Motor_test.cpp  mock_Adafruit_Crickit.cpp  mock_Adafruit_Crickit.h  mock_arduino.cpp  mock_arduino.h  motor_test.cpp
public/: index.html
scripts/: build.js  eslint.js  test.js
src/: ActionPanel.js  ActionPanel.scss  ActionPanel.test.js  App.js  (+214 more)
(+64 files in other folders)
